--- a/README.org
+++ b/README.org
@@ -131,7 +131,7 @@ Notes:
 
  |----------+------------------------------------+-------------------------------------------------------------------+--------------------------------+----------------------------------------+--------------------------------|
  |          | OVH                                | Linode                                                            | DigitalOcean                   | Scaleway                               | Vultr                          |
- |----------+------------------------------------+-------------------------------------------------------------------+--------------------------------+----------------------------------------+--------------------------------|
+ |----------+------------------------------------+-------------------------------------------------------------------+--------------------------------+----------------------------------------+----------------------j----------|
  | Linux    | Arch Linux, CentOS, Debian, Ubuntu | Arch, CentOS, Debian, Fedora, Gentoo, OpenSUSE, Slackware, Ubuntu | CentOS, Debian, Fedora, Ubuntu | Alpine, CentOS, Debian, Gentoo, Ubuntu | CentOS, Debian, Fedora, Ubuntu |
  | BSD      | No                                 | No                                                                | FreeBSD                        | No                                     | FreeBSD, OpenBSD               |
  | Windows  | No                                 | No                                                                | No                             | No                                     | Windows 2012 R2 (16$)          |
@@ -184,7 +184,7 @@ Notes:
 
  Notes:
 
-- Linode lets you install virtually any SO in your instance in the old-school way, almost as if you'd have to deal with the bare metal. Even the instance does not boot itself at the end, you have to boot it yourself from the control panel.
+- Linode lets you install virtually any SO in your instance in the old-school way, almost as if you'd have to deal with the bare metal. Even when the instance does not boot itself at the end, you have to boot it yourself from the control panel.
 - The Vultr's ISO image library include several ISOs like Alpine, Arch, Finnix, FreePBX, pfSense, Rancher Os, SystemRescueCD, and Trinity Rescue Kit.
 - The Vultr's "Custom ISO image" feature allows you to install virtually any SO supported by KVM and the server architecture.
 - Linode does not preload your ssh keys into the instance automatically, but it's trivial to do it manually anyway (ssh-copy-id).
